--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,35 +7,39 @@ jobs:
   build:
     docker:
     # specify the version you desire here
-    - image: circleci/openjdk:8-jdk
-
-    # Specify service dependencies here if necessary
-    # CircleCI maintains a library of pre-built images
-    # documented at https://circleci.com/docs/2.0/circleci-images/
-    # - image: circleci/postgres:9.4
-
-    working_directory: ~/repo
-
-    environment:
-      # Customize the JVM maximum heap limit
-      MAVEN_OPTS: -Xmx3200m
+    - image: circleci/openjdk:11-jdk-browsers
 
     steps:
     - checkout
+    - run:
+        command: mvn compile
 
-    # Download and cache dependencies
-    - restore_cache:
-        keys:
-        - v1-dependencies-{{ checksum "pom.xml" }}
-        # fallback to using the latest cache if no exact match is found
-        - v1-dependencies-
+    spotless:
+      docker:
+        - image: circleci/openjdk:11-jdk-browsers
+      steps:
+        - checkout
+        - run:
+            command: mvn spotless:check
 
-    - run: mvn dependency:go-offline
+      - run: mvn dependency:go-offline
 
-    - save_cache:
-        paths:
-        - ~/.m2
-        key: v1-dependencies-{{ checksum "pom.xml" }}
+    test:
+      docker:
+        - image: circleci/openjdk:11-jdk-browsers
+      steps:
+        - checkout
+        - run:
+            command: mvn test
 
-    # run tests!
-    - run: mvn integration-test -e
+    workflows:
+      version: 2
+      build_check_test:
+        jobs:
+          - build
+          - test:
+              requires:
+              - build
+          - spotless:
+              requires:
+              - build
