--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,19 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>com.diffplug.spotless</groupId>
+				<artifactId>spotless-maven-plugin</artifactId>
+				<version>1.16.0</version>
+				<configuration>
+					<java>
+						<eclipse>
+							<file>${basedir}/.circleci/spotless-format.xml</file>
+							<version>4.8.0</version>
+						</eclipse>
+					</java>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
