Set up basic security and h2 db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,22 @@
 spring.application.name=MyLights
-
 server.port=80
 
-spring.h2.console.enabled=true
+# Database
+spring.h2.console.enabled=false
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:h2:./db/mylights
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.user=sa
+spring.datasource.password=
+logging.file=./logs/mylights.log
+
+# Bean Overriding
+spring.main.allow-bean-definition-overriding=true
+
+# Internationalization
+spring.messages.basename=messages
+spring.messages.encoding=UTF-8
+
+# Thymeleaf
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.cache=false
