--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=MyLights
 server.port=80
 
 # Database
-spring.h2.console.enabled=false
+spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:h2:./db/mylights
 spring.datasource.driverClassName=org.h2.Driver
