Set up forced login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,9 @@ spring.messages.encoding=UTF-8
 # Thymeleaf
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.cache=false
+
+#User
+application.user.defaultPassword=Gl0w_up!
+application.user.username=mylightsuser
+spring.queries.users-query=SELECT username, password, enabled FROM USER WHERE username=?
+spring.queries.roles-query=SELECT u.username, r.role FROM USER u INNER JOIN role r ON(u.role_roleid=r.roleID) WHERE u.username=?
